[gd_scene load_steps=6 format=3 uid="uid://d3sv1ewrsyst"]

[ext_resource type="Script" path="res://src/app/system_viewer/SystemViewer.gd" id="1"]
[ext_resource type="Script" path="res://src/app/system_viewer/SystemCameraController.gd" id="2"]
[ext_resource type="Script" path="res://src/app/system_viewer/SystemInspectorPanel.gd" id="3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.02, 0.02, 0.06, 1)
sky_horizon_color = Color(0.05, 0.05, 0.1, 1)
ground_bottom_color = Color(0.01, 0.01, 0.03, 1)
ground_horizon_color = Color(0.05, 0.05, 0.1, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 1
ambient_light_color = Color(0.05, 0.05, 0.08, 1)
ambient_light_energy = 0.1
tonemap_mode = 2
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/4 = 1.0
glow_intensity = 0.4
glow_bloom = 0.1
glow_blend_mode = 1

[node name="SystemViewer" type="Node3D"]
script = ExtResource("1")

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_1")

[node name="CameraRig" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)
fov = 60.0
far = 1000.0
script = ExtResource("2")

[node name="BodiesContainer" type="Node3D" parent="."]

[node name="OrbitsContainer" type="Node3D" parent="."]

[node name="ZonesContainer" type="Node3D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="Panel" parent="UI"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 0
anchor_right = 1.0
offset_bottom = 50.0

[node name="MarginContainer" type="MarginContainer" parent="UI/TopBar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Back to Galaxy (Esc)"
text = "← Galaxy"

[node name="TitleLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "StarGen System Viewer"

[node name="VSeparator" type="VSeparator" parent="UI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UI/TopBar/MarginContainer/HBoxContainer"]
modulate = Color(0.7, 0.7, 0.7, 1)
layout_mode = 2
text = "Ready"

[node name="SidePanel" type="Panel" parent="UI"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 0
anchor_bottom = 1.0
offset_top = 50.0
offset_right = 320.0

[node name="MarginContainer" type="MarginContainer" parent="UI/SidePanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="UI/SidePanel/MarginContainer"]
layout_mode = 2
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="GenerationSection" type="VBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GenerationLabel" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "System Generation"

[node name="StarCountContainer" type="HBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection"]
layout_mode = 2

[node name="StarCountLabel" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/StarCountContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Stars:"

[node name="StarCountSpin" type="SpinBox" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/StarCountContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 4.0
value = 1.0
rounded = true

[node name="SeedContainer" type="HBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection"]
layout_mode = 2

[node name="SeedLabel" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/SeedContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Seed:"

[node name="SeedInput" type="SpinBox" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/SeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 999999.0
value = 12345.0
rounded = true

[node name="ButtonContainer" type="HBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GenerateButton" type="Button" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Generate"

[node name="RerollButton" type="Button" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/GenerationSection/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Generate with random seed"
text = "Re-roll"

[node name="HSeparator1" type="HSeparator" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ViewSection" type="VBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ViewLabel" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/ViewSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "View Options"

[node name="ShowOrbitsCheck" type="CheckBox" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/ViewSection"]
layout_mode = 2
button_pressed = true
text = "Show Orbits"

[node name="ShowZonesCheck" type="CheckBox" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer/ViewSection"]
layout_mode = 2
button_pressed = true
text = "Show Zones"

[node name="HSeparator2" type="HSeparator" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="InspectorPanel" type="VBoxContainer" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4
script = ExtResource("3")

[node name="HSeparator3" type="HSeparator" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Camera Controls"

[node name="CameraInfo" type="Label" parent="UI/SidePanel/MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "• Left Mouse: Orbit
• Right Mouse: Pan
• Scroll: Zoom
• F: Focus origin
• T: Toggle view angle
• Click body: Select + focus"
